# comics

./: .gitignore  .gitmodules  CMakeLists.txt
scripts/: get_deps.sh  get_resources.sh
src/: image_loader.cpp  main.cpp  state.cpp  state.h  todo.md  types.h  types_glz.h
src/app/: app.cpp  app.h  app_render.cpp  colors.h  main.cpp  settings.cpp  utils.cpp  utils.h
src/app/impl/: stb.cpp
src/app/windows/: error_filter.cpp  error_list.cpp  file_index.cpp  filter.cpp  image_inspect.cpp  image_loader.cpp  image_loader.h  images.cpp  jq.cpp  json.hpp  json_explorer.cpp  loader.cpp  manga_list.cpp  reader.cpp
src/common/: cmp.cpp  conv.cpp  errors.cpp
src/indexer/: checks.cpp  main.cpp  parser.cpp  vips.cpp
